WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138533
Fix the build when CSS Selectors Level 4 is disabled
https://bugs.webkit.org/show_bug.cgi?id=138533
Summary
Fix the build when CSS Selectors Level 4 is disabled
Benjamin Poulain
Reported
2014-11-07 21:28:50 PST
Fix the build when CSS Selectors Level 4 is disabled
Attachments
Patch
(2.68 KB, patch)
2014-11-07 21:30 PST
,
Benjamin Poulain
benjamin
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-11-07 21:30:11 PST
Created
attachment 241225
[details]
Patch
Benjamin Poulain
Comment 2
2014-11-10 14:48:09 PST
Committed
r175833
: <
http://trac.webkit.org/changeset/175833
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug