Fix the build when CSS Selectors Level 4 is disabled https://bugs.webkit.org/show_bug.cgi?id=138533

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-11-10

* css/CSSSelector.cpp:
(WebCore::appendArgumentList):
* cssjit/SelectorCompiler.cpp:
(WebCore::SelectorCompiler::SelectorCodeGenerator::generateElementLinkMatching):


Canonical link: https://commits.webkit.org/156413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175833 268f45cc-cd09-0410-ab3c-d52691b4dbfc